--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<img class="img-circle" src ="images/IMG_0802.jpg"></a>
+					<img class="img-circle" src ="images/IMG_0802.JPG"></a>
 					<h1 id="fade">I am a student at UCI <br />Welcome to my website<br />
 					</h1>
 
