--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,10 +3,10 @@
 	Jessica's personal website
 	Informatics 133
 -->
-<html>
+
 <html>
 	<head>
-		<title>Jessica Zhang | Resume </title>
+		<title>Jessica Zhang | Portfolio</title>
 		<style>
 		@import url('https://fonts.googleapis.com/css?family=Raleway');
 		</style>
@@ -21,7 +21,7 @@
 		<script src="assets/js/main.js"></script>
 		<meta charset="utf-8" />
 	</head>	
-	<body id="top">
+<body id="top">
 	
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
