--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 			<ul class="nav navbar-nav" >
 			</a>
 				<li>
-					<a href="#">Projects</a>
+					<a href="Portfolio.html">Projects</a>
 				</li>
 				<li>
-					<a href="#">Resume</a>
+					<a href="resume.html">Resume</a>
 				</li>
 				<li>
-					<a href="#">Contact</a>
+					<a href="contact.html">Contact</a>
 				</li>
 				<li>
-					<a href="#">About </a>
+					<a href="website.html">About </a>
 				</li>
 			</ul>
 			</div>
