--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<img class="img-circle" src ="images/profile.png"></a>
+					<img class="img-circle" src ="images/profile.PNG"></a>
 				</div>
 			</header>
 			
