--- a/resume.html
+++ b/resume.html
@@ -52,12 +52,47 @@
 				<li>
 					<a href="website.html">About </a>
 				</li>
+				<li>
+					<a href="userresearch.html">User Research </a>
+				</li>
 			</ul>
 			</div>
 
 
         </div>
     </nav>
-	</body>
+			<!-- Header -->
+			<header id="header">
+				<div class="inner">
 
+				</div>
+			</header>
+			
+			<!---Main --->
+			<div id="main">
+			
+			<section id="one">
+				<header class="major">
+					<h2>Resume</h2>
+					<p> Please click below to view or download a PDF version of my resume </p>
+				</header>
+			</section>
+				
+			<section id="two">
+
+				<div class="row">
+				<article class="blog">
+					<p>
+
+					</p>
+					<a href="images/Jessica-Marie-Zhang_Resume.pdf">
+						<img src="images/resume.png" alt="Resume">
+					</a>
+				</article>
+				</div>
+			</section>
+
+
+				
+	</body>
 </html>
