--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,35 @@
 				<li>
 					<a href="website.html">About </a>
 				</li>
+				<li>
+					<a href="userresearch.html">User Research </a>
+				</li>
 			</ul>
 			</div>
 
 
         </div>
     </nav>
+			<!-- Header -->
+			<header id="header">
+				<div class="inner">
 
+				</div>
+			</header>
+			
+			<!---Main --->
+			<div id="main">
+			
+			<section id="one">
+				<header class="major">
+					<h2>Contact Me</h2>
+				</header>
+					<p>You can contact me via:</p>
+					<p><a href="https://www.facebook.com/jessica.zhang.35?ref=bookmarks">Facebook</a></p>
+					<p><a href="https://www.linkedin.com/in/jessica-zhang-96955b103">LinkedIn</a></p>		
+					<p><a href="mailto:jesmzhang@gmail.com">Email</a></p>					
+			</section>				
+
+			</div>
 	</body>
-
 </html>
