--- a/website.html
+++ b/website.html
@@ -52,6 +52,9 @@
 				<li>
 					<a href="website.html">About </a>
 				</li>
+				<li>
+					<a href="userresearch.html">User Research </a>
+				</li>
 			</ul>
 			</div>
 
