--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 				<li>
 					<a href="website.html">About </a>
 				</li>
+				<li>
+					<a href="userresearch.html">User Research </a>
+				</li>
 			</ul>
 			</div>
 
@@ -61,7 +64,7 @@
 			<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<img class="img-circle" src ="images/profile.PNG"></a>
+					<img class="img-circle" src ="images/profile.png"></a>
 				</div>
 			</header>
 			
