--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
 
 					</p>
 					<a href="images/Jessica-Marie-Zhang_Resume.pdf">
-						<img src="images/resume.png" alt="Resume">
+						<img src="images/resume.PNG" alt="Resume">
 					</a>
 				</article>
 				</div>
