--- a/Portfolio.html
+++ b/Portfolio.html
@@ -91,14 +91,14 @@
 						DJL will use is to provide an extensive, downloadable pack of game contents, including but not limited to: level and enemy variety,
 						backgrounds, textures, weapons, and costumes that players can purchase for $2 to $5.  
 					</p>
-					<img class="blog" src ="images/em.png"></a>
+					<img class="blog" src ="images/em.PNG"></a>
 				</article>	
 				
 				<article class="blog">
 					<p>Molly is an eleven year old girl who has commissioned this project because she is concerned about losing her pet dog, Honey. 
 					Molly wants an app that will work on her cell phone. When she loses Honey, she will be able to turn on the app to locate Honey, 
 					and get a plan for finding her. The purpose of the system is to provide a solution to Molly’s problem. </p>
-					<img class="blog" src ="images/User Case_ new User.png"></a>
+					<img class="blog" src ="images/User Case_ new User.PNG"></a>
 				</article>	
 								
 				</div>
