--- a/Portfolio.html
+++ b/Portfolio.html
@@ -98,7 +98,7 @@
 					<p>Molly is an eleven year old girl who has commissioned this project because she is concerned about losing her pet dog, Honey. 
 					Molly wants an app that will work on her cell phone. When she loses Honey, she will be able to turn on the app to locate Honey, 
 					and get a plan for finding her. The purpose of the system is to provide a solution to Molly’s problem. </p>
-					<img class="blog" src ="images/User Case_ new User.PNG">
+					<img class="blog" src ="images/usecase.PNG">
 				</article>	
 								
 				</div>
