--- a/userresearch.html
+++ b/userresearch.html
@@ -165,7 +165,15 @@
 				<article class="blog">
 				<h3>Cognitive Walkthroughs</h3>
 					<p>Cognitive Walkthroughs are important because the designer can use it to determine whether a new user can carry out the specific task within a given system. I ask the user to complete a series of tasks and then evaluate whether the goal was achieved, if the actions available were obvious, and if the user got feedback that their action is correct.  Results of the walkthrough showed that users preferred visible navigation menu, rather than the collapsed hamburger menu. The only challenge that I faced was that asking the user four questions after each step of the task was tedious. </p>
-					<a href="https://drive.google.com/open?id=1vLmCCJWAXkgiBi68Hrp81fIvonRelzZe9rbmNxGbhe4"><img class="badminton" src ="images/research/cognitivewalk.PNG"></a>
+					<a href="https://drive.google.com/open?id=1vLmCCJWAXkgiBi68Hrp81fIvonRelzZe9rbmNxGbhe4"><img class="badminton" src ="images/research/cognitivewalk.png"></a>
+				</article>	
+				<article class="blog">
+				<h3>User Testing</h3>
+				<p>I conducted two tests: the click test and the question test. A click test allows the designer to see the effectiveness of the structure of my site, such as navigation. The click test showed that not all users know what social media icons look like; a possible solution would be to include labels next to the icons. The question test’s purpose was to get an understanding of what elements appealed to the user the most and the least. Results of the question test showed that users felt that the layout was too simple because there were not any meaningful or interesting interactions.  </p>
+					<p><a href="https://usabilityhub.com/do/ed2b801c3086/503f
+">Link to Click Test</a></p>		
+					<p><a href="https://usabilityhub.com/do/45cd046feeb4/bb16
+">Link to Question Test</a></p>	
 				</article>					
 				</div>
 			</section>
